# trading-app-python

./: .env.example  .gitignore  README.md  blueprint.md  pyproject.toml  skills-lock.json
.agents/skills/senior-developer/: SKILL.md
config/: settings.yaml  user_strikes.json
dashboard/: app.py
docs/: architecture.excalidraw  vwap_rollover.excalidraw
src/scanner/: atm_engine.py  candle_builder.py  config.py  instruments.py  main.py  signal_engine.py  snapshot.py  state.py  straddle_engine.py  vwap_engine.py
src/scanner/brokers/: base.py  dhan.py  zerodha.py
tests/: conftest.py  test_atm_engine.py  test_candle_builder.py  test_config.py  test_instruments.py  test_integration_pipeline.py  test_signal_engine.py  test_snapshot.py  test_state.py  test_straddle_engine.py  test_vwap_engine.py
